--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "esModuleInterop": true,
-    "target": "es6",
+    "target": "es2017",
+    "lib": ["es2017"],
     "outDir": "build",
     "module": "commonjs",
     "moduleResolution": "node",
